# cloze-wikt-cards

./: .gitignore  README.md  environment.yaml  fill_all.sh  pyproject.toml  setup.py
anki-examples/: fill_examples.py  fill_script.py  find_examples.py  process_subs.py  semantic_ranking.py
anki-examples/notebooks/: example_distribution.npy
anki_examples/: fill_examples.py  fill_examples_manual.py  fill_script.py  find_examples.py  process_subs.py
anki_utils/: deck.py
asr-adder/client-gui/: gui.html
asr-adder/notebooks/: pho-whisper.ipynb  requests.ipynb
asr-adder/server/: server.py  server_test.py
cloze_cards/: README.md
cloze_cards/en-vi/: back.html  front.html
cloze_cards/styling/: styling.css
cloze_cards/vi-en/: back.html  back_test.html  front.html  front_test.html
notebooks/: semantic_ranking.ipynb  text_segmentation.ipynb
src/cloze_wikt_cards/: __init__.py
src/cloze_wikt_cards/anki_examples/: cudf.ipynb  find_examples.py
src/cloze_wikt_cards/asr-adder/: README.md
src/cloze_wikt_cards/asr-adder/server/: server.py  server_test.py
src/cloze_wikt_cards/wiktionary_defs/: fill_with_wikt.py
src/cloze_wikt_cards/wiktionary_defs/notebooks/: quote_characters.ipynb  wikt.ipynb
wiktionary_defs/: fill_with_wikt.py
wiktionary_defs/notebooks/: wikt.ipynb
