[project]
name = "cloze-wikt-cards"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Devin Ha", email = "t.ha@tu-berlin.de" }
]
requires-python = ">=3.12"
dependencies = [
    "flask==3.1.0",
    "pandas==2.2.3",
    "torch==2.5.1",
    "transformers==4.46.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
